@@ -1,7 +1,7 @@
 package HTML::StateTable;
 
 use 5.010001;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 36 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 37 $ =~ /\d+/gmx );
 
 use HTML::StateTable::Constants qw( EXCEPTION_CLASS FALSE RENDERER_CLASS
                                     RENDERER_PREFIX TABLE_META TRUE );
@@ -86,7 +86,8 @@ function
 
 =cut
 
-has 'context' => is => 'ro', isa => Context, predicate => 'has_context';
+has 'context' => is => 'ro', isa => Context, weak_ref => TRUE,
+   predicate => 'has_context';
 
 =item displayable_columns
 
