@@ -1,5 +1,6 @@
 Revision history for HTML::StateTable
 
+          - Weakened context reference. Nasty hack in renderer for top control
           - Switched to using less
           - Changed filterable control character
           - Fixes table row count usage
